[package]
name = "dino_park_guard"
version = "0.3.1"
authors = ["Florian Merz <me@fiji-flo.de>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/mozilla-iam/dino-park-guard"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
dino_park_gate = { git = "https://github.com/mozilla-iam/dino-park-gate", tag = "0.8.3", version = "0.8.3" }
dino_park_trust = { git = "https://github.com/mozilla-iam/dino-park-trust", tag = "0.0.7", version = "0.0.7" }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
failure = "0.1"
