[package]
name = "dino_park_guard"
version = "0.4.7"
authors = ["Florian Merz <me@fiji-flo.de>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/mozilla-iam/dino-park-guard"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
dino_park_gate = { git = "https://github.com/mozilla-iam/dino-park-gate", tag = "0.9.6", version = "0.9.6" }
dino_park_trust = { git = "https://github.com/mozilla-iam/dino-park-trust", tag = "0.1.0", version = "0.1.0" }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[dev-dependencies]
anyhow = "1"
