[package]
name = "dino_park_guard"
version = "0.3.4"
authors = ["Florian Merz <me@fiji-flo.de>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/mozilla-iam/dino-park-guard"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
dino_park_gate = { git = "https://github.com/mozilla-iam/dino-park-gate", tag = "0.8.6", version = "0.8.6" }
dino_park_trust = { git = "https://github.com/mozilla-iam/dino-park-trust", tag = "0.0.8", version = "0.0.8" }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
failure = "0.1"
